# Schemly

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
include/config/: version.h.in
src/: CMakeLists.txt
src/schemly/: CMakeLists.txt  main.cpp
